objects/ssot__CarePreauthorization__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Preauthorization Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPlanId__c</fullName>
        <label>Member Plan</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NoteText__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayerId__c</fullName>
        <label>Payer</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreauthNumber__c</fullName>
        <label>PreauthNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreauthorizationExternalIdentifier__c</fullName>
        <label>Preauthorization External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreauthorizationStatus__c</fullName>
        <label>Preauthorization Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferringPhysicianName__c</fullName>
        <label>Referring Physician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666652788_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePreauthorization_MemberPlanId_ma_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CarePreauthorization_MemberPlanId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716666652788_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726584479_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePreauthorization_PayerId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CarePreauthorization_PayerId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1716726584479_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>